auton same scoring everywhere